		  notify it's disabled.
		* Fixed "0000738: Set search type to KAD if only KAD is selected as 
		  usable networks in settings"
		* Fixed amule.conf not being saves on remote preferences change.
		* Fixed ping time on servers, down to msecs resolution now.

	lfroen:
		* Prevent bad_alloc thrown on invalid connection attempts on EC.

	lionel77:
		* Display "Share Ratio" in shared files list.

	Phoenix:
		* Compilation fix for auto_ptr<> on Mac.

	Xaignar:
		* Ensured that partial files left from failed file-completion attempts
		  would be removed.
		* Fixed crash on remote gui when attempting to reload the ipfilters.
		* Fixed sorting of servers by ping-time, such that servers without a
		  known pingtime are sorted last.
		* Added a "Password incorrect" message to the login pages, for when
		  login failed. Also added a warning in case no passwords were set.
		* Ensured that known-file objects are properly initialized on the
		  remote gui. This among other things fixes not all of the items on
		  the sharedfiles list showing a 'has-comment' flag.
		* Compilation fix for GCC 3.2.

	Special Thanks To:
		* The usual people
		* From Kry: to the one that makes it all worth it.

--------------------------------------------------------------------------------

Version 2.1.1 - The "There can be only two! Point one! Point one!" version
----------
2006-03-18

	GonoszTopi:
		* Fixed sources coming from an 'Unknown' origin.

	ken:
		* Fixed Mac aMule showing erroneous version number in Get Info.
		* Disabled the HTTP download progress dialog on Mac (again) because
		  it causes crashes.
		* Suppressed an error dialog on failure to lookup the host's domain
		  name.  Demoted it to just a message in the log.
		* Fixed a bug in ed2kHelperScript.app (the Mac ed2k link handler)
		  which prevented it from working properly if there was a space in the
		  path to the aMule application.  Thanks to Gomaaz for finding this bug.